--- a/Practicas_Arrays/Ejercicio4.html
+++ b/Practicas_Arrays/Ejercicio4.html
@@ -12,14 +12,14 @@
          Usa desestructuración para obtener los primeros dos números en variables individuales 
          y almacena el resto de los números en un array llamado resto.*/
         let numeros = [1, 3, 5, 7, 4, 2 ,7];
-        console.log('Array numeros: ' + numeros.toString())
-        let numero1 = numeros.shift();
-        let numero2 = numeros.shift();
-        console.log('Variable numero1: ' + numero1);
-        console.log('Variable numero2: ' + numero2);
+        console.log('Numeros = ' + numeros.toString());
+
+        let x,y, resto;
+        [x,y,...resto] = numeros;
         
-        let resto = numeros;
-        console.log('Resto: ' + resto.toString());
+        console.log('x = ' + x);
+        console.log('y = ' + y);
+        console.log('Resto = ' + resto.toString());
 
     </script>
 </body>
