--- a/06_Practicas/Practica_1/practica06_01.html
+++ b/06_Practicas/Practica_1/practica06_01.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <script>
+        /*
+        Crea una aplicación web que pida al usuario palabras continuamente hasta que el popup se deje vacío o se cancele.
+        A continuación, se eliminarán todas las palabras repetidas y además se ordenarán en español, pero en orden inverso 
+        (de la Z a la A) y se mostrará el resultado por pantalla.
+        Utilizar funciones flecha si se considera apropiado.
+        Ayuda: cancelar el popup devuelve null.
+        */
        
         function noDialogo(palabra) {
             if (palabra == null) {
@@ -50,7 +57,7 @@
 
         while (noDialogo(palabra)) {
 
-            palabras.add(palabra);
+            palabras.add(palabra.toLowerCase());
 
             palabra = window.prompt("Introduce una palabra");
         }
