--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </ul>
         <li type="disc"><h3>Unidad 6</h3>
             <ul>
-                <li type="circle"><h4><a href="">Práctica 1</a></h4></li>
-                <li type="circle"><h4><a href="">Práctica 2</a></h4></li>
+                <li type="circle"><h4><a href="./06_Practicas/practica06_01.html">Práctica 1</a></h4></li>
+                <li type="circle"><h4><a href="./06_Practicas/practica06_02.html">Práctica 2</a></h4></li>
                 <li type="circle"><h4><a href="">Práctica 3</a></h4></li>
             </ul>
         </li>
