--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li type="circle"><h4><a href="./06_Practicas/practica06_01.html">Práctica 1</a></h4></li>
                 <li type="circle"><h4><a href="./06_Practicas/practica06_02.html">Práctica 2</a></h4></li>
-                <li type="circle"><h4><a href="">Práctica 3</a></h4></li>
+                <li type="circle"><h4><a href="./06_Practicas/practica06_03.html">Práctica 3</a></h4></li>
             </ul>
         </li>
     </ul>
