--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 <li type="circle"><h4><a href="./06_Practicas/practica06_03.html">Práctica 3</a></h4></li>
             </ul>
         </li>
+        <li type="disc"><h3>Unidad 7</h3>
+            <ul>
+                <li type="circle"><h4><a href="./07_Practicas/practica07_01.html">Práctica 1</a></h4></li>
+            </ul>
+        </li>
     </ul>
 </body>
 </html>
