--- a/08_09_Practicas/practica09_01.html
+++ b/08_09_Practicas/practica09_01.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <LINK REL=StyleSheet HREF="./css/estilo.css" TYPE="text/css" MEDIA=screen>
+    <link rel=StyleSheet href="./css/estilo.css" type="text/css">
     <title>Práctica 09 01 Francisco J Carrasco López</title>
 </head>
 <body>
