--- a/10_Practicas/practica10_01.html
+++ b/10_Practicas/practica10_01.html
@@ -10,7 +10,8 @@
 
     </div>
     <script>
-        /** No sé porqué las cookies no me funcionan en chrome ni edge, en firefox sí**/
+        /** No sé porqué las cookies no me funcionan en chrome ni edge, en firefox sí, en local.
+         * Desde https://fracarlop.github.io/js-daw2024-practicas-FranciscoJCarrasco/ funciona correctamente**/
         let nameCookie = 'nVisitas';
 
         let valorCookie = getCookie(nameCookie);
