--- a/10_Practicas/practica10_03.html
+++ b/10_Practicas/practica10_03.html
@@ -11,6 +11,7 @@
     <script type="module">
         import * as funciones from "./temporizador.js";
         // el módulo sólo funciona si el archivo no está en local, para probarlo se ha utilizado xamp.
+        // desde https://fracarlop.github.io/js-daw2024-practicas-FranciscoJCarrasco/ se ejecuta correctamente.
         let parrafo1 = document.getElementById('parrafo1');
         let parrafo2 = document.getElementById('parrafo2');
 
