--- a/11_Practicas/Practica_11_02/index.html
+++ b/11_Practicas/Practica_11_02/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Práctica 11 02</title>
+    <title>Práctica 11 02 Francisco J Carrasco</title>
   </head>
   <body>
     <main>
